@@ -2,7 +2,7 @@
 /***************************************************************
 *  Copyright notice
 *
-*  (c) 2010 Ingo Renner <ingo@typo3.org>
+*  (c) 2010-2011 Ingo Renner <ingo@typo3.org>
 *  All rights reserved
 *
 *  This script is part of the TYPO3 project. The TYPO3 project is
@@ -28,8 +28,8 @@
  * whether it fits the recommended version shipping with the extension.
  *
  * @author	Ingo Renner <ingo@typo3.org>
- * @package TYPO3
- * @subpackage solr
+ * @package	TYPO3
+ * @subpackage	solr
  */
 class tx_solr_report_SchemaStatus implements tx_reports_StatusProvider {
 
@@ -37,18 +37,18 @@ class tx_solr_report_SchemaStatus implements tx_reports_StatusProvider {
 	 * The schema name property is constructed as follows:
 	 *
 	 * tx_solr	- The extension key
-	 * x-y-z	- The Solr version this schema is meant to work with
+	 * x-y-z	- The extension version this schema is meant to work with
 	 * YYYYMMDD	- The date the schema file was changed the last time
 	 *
 	 * Must be updated when changing the schema.
 	 *
 	 * @var	string
 	 */
-	const RECOMMENDED_SCHEMA_VERSION = 'tx_solr-1-6-0--20110126';
+	const RECOMMENDED_SCHEMA_VERSION = 'tx_solr-1-6-0--20110208';
 
 	/**
 	 * Compiles a collection of schema version checks against each configured
-	 * Solr server. Only adds an entry if an a schema other than the
+	 * Solr server. Only adds an entry if a schema other than the
 	 * recommended one was found.
 	 *
 	 * @see typo3/sysext/reports/interfaces/tx_reports_StatusProvider::getStatus()
@@ -65,22 +65,23 @@ class tx_solr_report_SchemaStatus implements tx_reports_StatusProvider {
 				$message = '<p style="margin-bottom: 10px;">A schema different
 					from the one provided with the extension was detected.</p>
 					<p style="margin-bottom: 10px;">It is recommended to use the
-					shipping with the Apache Solr for TYPO3 extension as it
-					provides an optimized field setup for the use of Solr with
-					TYPO3. A difference can occur when you update the TYPO3
-					extension, but forget to update the schema.xml file on the
-					Solr server. The schema sometimes changes to accommodate
-					changes or new features in Apache Solr. Also make sure to
-					restart the Tomcat server after updating the schema.xml
-					file.</p><p style="margin-bottom: 10px;">Your Solr
-					server is currently using a schema named <strong>'
+					schema.xml file shipping with the Apache Solr for TYPO3
+					extension as it provides an optimized field setup for the
+					use of Solr with TYPO3. A difference can occur when you
+					update the TYPO3 extension, but forget to update the
+					schema.xml file on the Solr server. The schema sometimes
+					changes to accommodate changes or new features in Apache
+					Solr. Also make sure to restart the Tomcat server after
+					updating the schema.xml file.</p>
+					<p style="margin-bottom: 10px;">Your Solr server is
+					currently using a schema named <strong>'
 					. $solrConnection->getSchemaName() . '</strong>, the
 					recommended schema is called <strong>'
 					. self::RECOMMENDED_SCHEMA_VERSION . '</strong>. You can
 					find the recommended schema.xml file in the extension\'s
-					resources folder: <strong>EXT:solr/resources/solr/schema.xml
-					</strong>. While you\'re at it, please check whether you\'re
-					using the current solrconfig.xml file, too.</p>';
+					resources folder: EXT:solr/resources/solr/schema.xml. While
+					you\'re at it, please check whether you\'re using the
+					current solrconfig.xml file, too.</p>';
 
 				$message .= '<p>Affected Solr server:</p>
 					<ul>'
